--- a/css/estilos.css
+++ b/css/estilos.css
@@ -169,7 +169,7 @@ main .sobre-nosotros {
      align-items: center;
      justify-content: space-evenly;
      border-radius: 5px;
-     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6) ;
+     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
  }
  .cards .card img{
      width: 100px;
@@ -263,34 +263,54 @@ footer {
 
 /* Formularios */
 
+.principal {
+    margin: 10px 0 0 10px;
+    width: 50%;
+    display: block;
+    border: solid 2px;
+    border-radius: 20px; 
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+}
+
 label {
     display:block;
     margin-top:20px;
     letter-spacing:1px;
 }
  
-.principal {
-    display:block;
-    margin:0 auto;
-    width:510px;
-    color: #666666;
+.cabecera {
+    height: 100px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    color: #ffffff;
     font-family:Arial;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+    
+    
 }
+.cabecera >h1 {
+    margin: auto;
+}
+
  
 form {
     margin:0 auto;
     width:400px;
+    
 }
  
 input, textarea {
     width:380px;
     height:27px;
-    background:#666666;
-    border:2px solid #f6f6f6;
+    background:#fafbfc;
+    border:1px solid #0e0d0d;
     padding:10px;
     margin-top:5px;
-    font-size:10px;
+    font-size:10px #2255;
     color:#ffffff;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
 }
  
 textarea {
@@ -300,9 +320,14 @@ textarea {
 #submit {
     width:85px;
     height:35px;
-    border:none;
+    background: rgb(28, 79, 189);
+    border:solid 1px rgb(10, 10, 10);
     margin-top:20px;
+    margin-bottom: 50px;
     cursor:pointer;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+
 }
 
 /* Responsive */
@@ -358,6 +383,37 @@ textarea {
     .servicio-indiv img {
         width: 90%;
     }
+    /* social */
+
+    .social {
+        margin: auto;
+        justify-content: center;
+        align-items: center ;
+    }
+
+    /* formularios */
+
+    .principal {
+       width: 90%;
+    }
+    .cabecera {
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    input, textarea, label {
+        flex-direction: column;
+        justify-content: center;
+        justify-content: center;
+        width: 60%;
+        margin: 0px 0 5px 10px;
+    }
+    #submit {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+      
 }
 
 @media screen and (max-width: 500px) {
